Make alignMemory into a library function
This allows it to be used in MINIMAL_RUNTIME which can end up depending
on it in asan builds due to asan using mmap (which calls mmapAlloc).

This fixes the current failure on the waterfall of:
  asan.test_dyncall_specific_minimal_runtime

Also remove the default for the second argument here.  There are only
two call sites and both of them specify an alignment.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,7 +367,7 @@ jobs:
     steps:
       - run-tests:
           # also add a few asan tests
-          test_targets: "wasm2 asan.test_embind* asan.test_abort_on_exceptions asan.test_ubsan_full_left_shift_fsanitize_integer asan.test_pthread*"
+          test_targets: "wasm2 asan.test_embind* asan.test_abort_on_exceptions asan.test_ubsan_full_left_shift_fsanitize_integer asan.test_pthread* asan.test_dyncall_specific_minimal_runtime"
   test-wasm3:
     executor: bionic
     steps:
